--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
 	"homepage": "https://demos.creative-tim.com/purity-ui-dashboard/#/",
 	"dependencies": {
 		"@chakra-ui/icons": "^1.1.5",
-		"@chakra-ui/react": "1.8.8",
+		"@chakra-ui/react": "^1.8.8",
 		"@chakra-ui/system": "^1.12.1",
 		"@chakra-ui/theme-tools": "^1.3.6",
 		"@emotion/cache": "^11.7.1",
-		"@emotion/react": "^11.8.1",
-		"@emotion/styled": "^11.8.1",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
 		"@fontsource/open-sans": "^4.5.0",
 		"@fontsource/raleway": "^4.5.0",
 		"@fontsource/roboto": "^4.5.8",
 		"apexcharts": "^3.27.3",
 		"classnames": "2.3.1",
-		"framer-motion": "^4.1.17",
+		"framer-motion": "^6.5.1",
 		"match-sorter": "6.3.0",
-		"moment": "2.29.1",
+		"moment": "^2.29.4",
 		"node-sass": "7.0.1",
 		"nouislider": "15.0.0",
 		"react": "16.14.0",
